@@ -11,38 +11,38 @@ END
 
 : > maude.s
 
-# Should fail because we need CC and AS.
+# Should fail because we need CC and CCAS.
 echo 1
 cat > configure.in << 'END'
 AC_INIT
 AM_INIT_AUTOMAKE(nonesuch, nonesuch)
-AC_SUBST(ASFLAGS)
+AC_SUBST(CCASFLAGS)
 AC_OUTPUT(Makefile)
 END
 
 $ACLOCAL || exit 1
 $AUTOMAKE && exit 1
 
-# We still need AS.
+# We still need CCAS.
 echo 2
 cat > configure.in << 'END'
 AC_INIT
 AM_INIT_AUTOMAKE(nonesuch, nonesuch)
 AC_PROG_CC
-AC_SUBST(ASFLAGS)
+AC_SUBST(CCASFLAGS)
 AC_OUTPUT(Makefile)
 END
 
 $ACLOCAL || exit 1
 $AUTOMAKE && exit 1
 
-# We need ASFLAGS.
+# We need CCASFLAGS.
 echo 3
 cat > configure.in << 'END'
 AC_INIT
 AM_INIT_AUTOMAKE(nonesuch, nonesuch)
-AS='$(CC)'
-AC_SUBST(AS)
+CCAS='$(CC)'
+AC_SUBST(CCAS)
 AC_PROG_CC
 AC_OUTPUT(Makefile)
 END
@@ -55,10 +55,10 @@ echo 4
 cat > configure.in << 'END'
 AC_INIT
 AM_INIT_AUTOMAKE(nonesuch, nonesuch)
-AS='$(CC)'
-AC_SUBST(AS)
+CCAS='$(CC)'
+AC_SUBST(CCAS)
 AC_PROG_CC
-AC_SUBST(ASFLAGS)
+AC_SUBST(CCASFLAGS)
 AC_OUTPUT(Makefile)
 END
 
