@@ -1,3 +1,8 @@
+2002-01-22  Pavel Roskin  <proski@gnu.org>
+
+	* tests/asm.test: Use CCAS and CCASFLAGS instead of AS and 
+	ASFLAGS.
+
 2002-01-22  Akim Demaille  <akim@epita.fr>
 
 	* Makefile.am (FETCHFILES): Remove ansi2knr.c, add texinfo.tex.
